--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Vaishak Nair's Todo App built on React.js" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon/favicon.ico" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
